# cli-analysis-logs-dj

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
logs_analyzer/: __init__.py  analyze.py  check_validate.py  logs_parser.py  main.py  utils.py
logs_analyzer/logs/: __init__.py
logs_analyzer/reports/: __init__.py  handlers.py
tests_cli/: __init__.py  test_analyze.py  test_check_validate.py  test_handler.py  test_main.py  test_parse_log.py  test_utills.py
